fix: resolve cloud front prefix issue